# Slicer

./: CMakeLists.txt  README.md  Spectacular_Rottis-Bruticus.stl  main.cpp
active-object/: ActiveObject.cpp  ActiveObject.h  IMessage.h
geometry/: Geometry.cpp  Geometry.h  contourGen.cpp  contourGen.h  isPolygonInside.cpp  isPolygonInside.h
png_lib/: fpng.cpp
sliceAlgo/: SliceAlgo.cpp  SliceAlgo.h
stl/: loadSTL.cpp  loadSTL.h
